refactor : 바우처 생성 검증로직 추가 및 findAll() 리턴값 변경